errors.txt
    Checking jeryu v3.0.1 (/home/ubuntu/JeRyu)
error[E0603]: function `load_client` is private
  --> src/commands/system.rs:2:28
   |
 2 | use crate::{cli, dispatch::load_client};
   |                            ^^^^^^^^^^^ private function
   |
note: the function `load_client` is defined here
  --> src/dispatch.rs:17:1
   |
17 | fn load_client() -> Result<(gitlab_client::GitlabClient, String)> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `load_client` is private
  --> src/commands/pool.rs:6:40
   |
 6 |     let (client, _) = crate::dispatch::load_client()?;
   |                                        ^^^^^^^^^^^ private function
   |
note: the function `load_client` is defined here
  --> src/dispatch.rs:17:1
   |
17 | fn load_client() -> Result<(gitlab_client::GitlabClient, String)> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `dispatch`
 --> src/commands/pool.rs:2:32
  |
2 | use crate::{cli::PoolCommands, dispatch};
  |                                ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `gitlab_client::GitlabClient`
 --> src/commands/pool.rs:3:21
  |
3 | use jeryu::{docker, gitlab_client::GitlabClient, pool, state};
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cli`
 --> src/commands/system.rs:2:13
  |
2 | use crate::{cli, dispatch::load_client};
  |             ^^^

warning: unused import: `self`
 --> src/commands/secrets.rs:2:18
  |
2 | use crate::cli::{self, SecretsCommands};
  |                  ^^^^

For more information about this error, try `rustc --explain E0603`.
warning: `jeryu` (bin "jeryu") generated 4 warnings
error: could not compile `jeryu` (bin "jeryu") due to 2 previous errors; 4 warnings emitted
